log/build_2025-08-09_20-52-04/soma_cube_rl_bridge/stderr.log
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/safety_monitor_node.cpp: In member function ‘void soma_cube_rl_bridge::SafetyMonitorNode::robotStateCallback(dsr_msgs2::msg::RobotState_<std::allocator<void> >::SharedPtr)’:
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/safety_monitor_node.cpp:100:30: error: ‘using element_type = struct dsr_msgs2::msg::RobotState_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::msg::RobotState_<std::allocator<void> >’} has no member named ‘robot_mode’
  100 |   current_robot_mode_ = msg->robot_mode;
      |                              ^~~~~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/safety_monitor_node.cpp: In member function ‘void soma_cube_rl_bridge::SafetyMonitorNode::robotErrorCallback(dsr_msgs2::msg::RobotError_<std::allocator<void> >::SharedPtr)’:
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/safety_monitor_node.cpp:117:57: error: ‘using element_type = struct dsr_msgs2::msg::RobotError_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::msg::RobotError_<std::allocator<void> >’} has no member named ‘msg’; did you mean ‘msg1’?
  117 |     safety_reason_ = "Robot error: " + std::string(msg->msg.begin(), msg->msg.end());
      |                                                         ^~~
      |                                                         msg1
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/safety_monitor_node.cpp:117:75: error: ‘using element_type = struct dsr_msgs2::msg::RobotError_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::msg::RobotError_<std::allocator<void> >’} has no member named ‘msg’; did you mean ‘msg1’?
  117 |     safety_reason_ = "Robot error: " + std::string(msg->msg.begin(), msg->msg.end());
      |                                                                           ^~~
      |                                                                           msg1
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp: In member function ‘void soma_cube_rl_bridge::MotionProxyNode::moveJointCallback(std::shared_ptr<dsr_msgs2::srv::MoveJoint_Request_<std::allocator<void> > >, std::shared_ptr<dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> > >)’:
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:127:15: error: ‘using element_type = struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’} has no member named ‘message’
  127 |     response->message = "Motion rejected: Robot not in safe state";
      |               ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:133:37: error: cannot convert ‘dsr_msgs2::srv::MoveJoint_Request_<std::allocator<void> >::_pos_type’ {aka ‘std::array<double, 6>’} to ‘const std::vector<double, std::allocator<double> >&’
  133 |   if (!validateJointLimits(request->pos)) {
      |                            ~~~~~~~~~^~~
      |                                     |
      |                                     dsr_msgs2::srv::MoveJoint_Request_<std::allocator<void> >::_pos_type {aka std::array<double, 6>}
In file included from /home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:1:
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/include/soma_cube_rl_bridge/motion_proxy_node.hpp:82:56: note:   initializing argument 1 of ‘bool soma_cube_rl_bridge::MotionProxyNode::validateJointLimits(const std::vector<double, std::allocator<double> >&)’
   82 |   bool validateJointLimits(const std::vector<double> & joint_positions);
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:135:15: error: ‘using element_type = struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’} has no member named ‘message’
  135 |     response->message = "Motion rejected: Joint limits exceeded";
      |               ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:143:15: error: ‘using element_type = struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’} has no member named ‘message’
  143 |     response->message = "Motion rejected: Velocity limits exceeded";
      |               ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:151:15: error: ‘using element_type = struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’} has no member named ‘message’
  151 |     response->message = "Motion rejected: Acceleration limits exceeded";
      |               ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:159:15: error: ‘using element_type = struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’} has no member named ‘message’
  159 |     response->message = "Doosan move_joint service not available";
      |               ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:172:15: error: ‘using element_type = struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’} has no member named ‘message’
  172 |     response->message = doosan_response->message;
      |               ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:172:42: error: ‘using element_type = struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’} has no member named ‘message’
  172 |     response->message = doosan_response->message;
      |                                          ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:178:15: error: ‘using element_type = struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveJoint_Response_<std::allocator<void> >’} has no member named ‘message’
  178 |     response->message = "Timeout waiting for Doosan move_joint response";
      |               ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp: In member function ‘void soma_cube_rl_bridge::MotionProxyNode::moveStopCallback(std::shared_ptr<dsr_msgs2::srv::MoveStop_Request_<std::allocator<void> > >, std::shared_ptr<dsr_msgs2::srv::MoveStop_Response_<std::allocator<void> > >)’:
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:192:15: error: ‘using element_type = struct dsr_msgs2::srv::MoveStop_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveStop_Response_<std::allocator<void> >’} has no member named ‘message’
  192 |     response->message = "Doosan move_stop service not available";
      |               ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:205:15: error: ‘using element_type = struct dsr_msgs2::srv::MoveStop_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveStop_Response_<std::allocator<void> >’} has no member named ‘message’
  205 |     response->message = doosan_response->message;
      |               ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:205:42: error: ‘using element_type = struct dsr_msgs2::srv::MoveStop_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveStop_Response_<std::allocator<void> >’} has no member named ‘message’
  205 |     response->message = doosan_response->message;
      |                                          ^~~~~~~
/home/jack/ros2_ws/src/DoosanBootcamp3rd/soma_cube_rl_bridge/src/motion_proxy_node.cpp:211:15: error: ‘using element_type = struct dsr_msgs2::srv::MoveStop_Response_<std::allocator<void> >’ {aka ‘struct dsr_msgs2::srv::MoveStop_Response_<std::allocator<void> >’} has no member named ‘message’
  211 |     response->message = "Timeout waiting for Doosan move_stop response";
      |               ^~~~~~~
gmake[2]: *** [CMakeFiles/safety_monitor_node.dir/build.make:76: CMakeFiles/safety_monitor_node.dir/src/safety_monitor_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:624: CMakeFiles/safety_monitor_node.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake[2]: *** [CMakeFiles/motion_proxy_node.dir/build.make:76: CMakeFiles/motion_proxy_node.dir/src/motion_proxy_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:597: CMakeFiles/motion_proxy_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
